--- a/dirt-bikes-unlimited/package.json
+++ b/dirt-bikes-unlimited/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/aos": "^3.0.7",
     "@types/gsap": "^3.0.0",
+    "@types/react-slick": "^0.23.13",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
@@ -20,6 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
